--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A boilerplate project for webpack-react config",
   "main": "index.js",
   "scripts": {
-    "start":"webpack serve --mode development",
-    "watch":"webpack --watch",
-    "build:production": "webpack --mode production"
+    "start": "webpack serve --config webpack.dev.js",
+    "watch": "webpack --watch",
+    "build": "webpack  serve --config webpack.prod.js"
   },
   "keywords": [
     "Reactjs",
@@ -23,7 +23,9 @@
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "react": "^18.3.1",
